<resources>
    <string name="app_name">MyApp_Kotlin_11</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_australia">Canberra is the capital of Austria.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connect the Red Sea and the Indian Ocean.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="warning_test">Are you sure you want to do this?</string>
    <string name="shoew_answer_button">Show answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judjement_toast">Cheating is wrong.</string>
    <string name="move_to_main_activity">Go back</string>
    <string name="restart_button_text">Restart Game</string>
    <string name="some">Some</string>
    <string name="body">Body</string>
</resources>